--- a/kubernetes/apps/default/immich/ks.yaml
+++ b/kubernetes/apps/default/immich/ks.yaml
@@ -12,6 +12,8 @@ spec:
   components:
     - ../../../../components/volsync
   dependsOn:
+    - name: intel-device-plugin-gpu
+      namespace: kube-system
     - name: volsync
       namespace: volsync-system
   interval: 30m
