feat: Deploy hdhr-ac4

--- a/kubernetes/apps/media/kustomization.yaml
+++ b/kubernetes/apps/media/kustomization.yaml
@@ -10,6 +10,7 @@ resources:
   - ./audiobookshelf/ks.yaml
   - ./bazarr/ks.yaml
   - ./dispatcharr/ks.yaml
+  - ./hdhr-ac4/ks.yaml
   - ./huntarr/ks.yaml
   - ./jellyfin/ks.yaml
   - ./kometa/ks.yaml
