--- a/kubernetes/apps/media/plex/ks.yaml
+++ b/kubernetes/apps/media/plex/ks.yaml
@@ -3,7 +3,7 @@
 apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
-  name: plex
+  name: &app plex
 spec:
   components:
     # - ../../../../components/nfs-scaler
@@ -17,8 +17,8 @@ spec:
   path: ./kubernetes/apps/media/plex/app
   postBuild:
     substitute:
-      APP: plex
-      VOLSYNC_CAPACITY: 50Gi
+      APP: *app
+      VOLSYNC_CAPACITY: 100Gi
   prune: true
   sourceRef:
     kind: GitRepository
