--- a/kubernetes/apps/media/plex/app/helmrelease.yaml
+++ b/kubernetes/apps/media/plex/app/helmrelease.yaml
@@ -21,7 +21,7 @@ spec:
               tag: 1.42.2.10156@sha256:9ad8a3506e1d8ebda873a668603c1a2c10e6887969564561be669efd65ae8871
             env:
               TZ: America/New_York
-              PLEX_ADVERTISE_URL: https://plex-test.noms.tv:443,http://10.1.20.23:32400,http://plex.media.svc.cluster.local:32400
+              PLEX_ADVERTISE_URL: https://plex.noms.tv:443,http://10.1.20.23:32400,http://plex.media.svc.cluster.local:32400
               PLEX_NO_AUTH_NETWORKS: 10.1.0.0/16
             probes:
               liveness: &probes
@@ -77,8 +77,7 @@ spec:
     route:
       app:
         hostnames:
-          # - "{{ .Release.Name }}.noms.tv" # Enable for Production
-          - "plex-test.noms.tv" # Remove after testing
+          - "{{ .Release.Name }}.noms.tv"
         parentRefs:
           - name: envoy-external
             namespace: network
