chore: Move media folder

--- a/kubernetes/apps/media/kometa/app/externalsecret.yaml
+++ b/kubernetes/apps/media/kometa/app/externalsecret.yaml
@@ -353,7 +353,7 @@ spec:
             radarr:
                 url: http://radarr
                 token: {{ .RadarrAPIKey }}
-                root_folder_path: /PlexMedia/Movies
+                root_folder_path: /media/Movies
                 quality_profile: Any
                 tag: kometa
                 add_missing: false
@@ -369,7 +369,7 @@ spec:
             sonarr:
                 url: http://sonarr
                 token: {{ .SonarrAPIKey }}
-                root_folder_path: /PlexMedia/TV
+                root_folder_path: /media/TV
                 quality_profile: Any
                 tag: kometa
                 add_missing: false
