chore: Change labels

--- a/kubernetes/apps/system-upgrade/forgejo-runner/app/helmrelease.yaml
+++ b/kubernetes/apps/system-upgrade/forgejo-runner/app/helmrelease.yaml
@@ -16,5 +16,4 @@ spec:
         existingInitSecret: "forgejo-runner-secret"
       file:
         runner:
-          labels:
-            - home-ops-runner
+          labels: ["home-ops-runner"]
