--- a/.forgejo/labeler.yaml
+++ b/.forgejo/labeler.yaml
@@ -6,9 +6,9 @@ area/docs:
   - changed-files:
       - any-glob-to-any-file:
           - "README.md"
-area/github:
+area/forgejo:
   - changed-files:
-      - any-glob-to-any-file: ".github/**/*"
+      - any-glob-to-any-file: ".forgejo/**/*"
 area/kubernetes:
   - changed-files:
       - any-glob-to-any-file: "kubernetes/**/*"
