--- a/.forgejo/labels.yaml
+++ b/.forgejo/labels.yaml
@@ -4,7 +4,7 @@
   color: "0e8a16"
 - name: area/docs
   color: "0e8a16"
-- name: area/github
+- name: area/forgejo
   color: "0e8a16"
 - name: area/kubernetes
   color: "0e8a16"
@@ -19,11 +19,11 @@
 # Renovate Types
 - name: renovate/container
   color: "027fa0"
-- name: renovate/github-action
+- name: renovate/forgejo-action
   color: "027fa0"
 - name: renovate/grafana-dashboard
   color: "027fa0"
-- name: renovate/github-release
+- name: renovate/forgejo-release
   color: "027fa0"
 - name: renovate/helm
   color: "027fa0"
