--- a/.forgejo/workflows/flux-local.yaml
+++ b/.forgejo/workflows/flux-local.yaml
@@ -6,7 +6,7 @@ on:
     branches: ["main"]
 
 concurrency:
-  group: ${{ github.workflow }}-${{ github.event.number || github.ref }}
+  group: ${{ forgejo.workflow_ref }}-${{ forgejo.event.number || forgejo.ref_name }}
   cancel-in-progress: true
 
 permissions:
@@ -15,7 +15,8 @@ permissions:
 jobs:
   filter:
     name: Flux Local - Filter
-    runs-on: ubuntu-latest
+    runs-on: docker
+    container: ghcr.io/catthehacker/ubuntu:runner-latest
     outputs:
       changed-files: ${{ steps.changed-files.outputs.changed_files }}
     steps:
@@ -29,10 +30,11 @@ jobs:
     if: ${{ needs.filter.outputs.changed-files != '[]' }}
     needs: filter
     name: Flux Local - Test
-    runs-on: ubuntu-latest
+    runs-on: docker
+    container: ghcr.io/catthehacker/ubuntu:runner-latest
     steps:
       - name: Checkout
-        uses: actions/checkout@8e8c483db84b4bee98b60c0593521ed34d9990e8 # v6.0.1
+        uses: actions/checkout@v6
         with:
           persist-credentials: false
 
@@ -43,14 +45,15 @@ jobs:
             test
             --all-namespaces
             --enable-helm
-            --path /github/workspace/kubernetes/flux/cluster
+            --path ${{ forgejo.workspace }}/kubernetes/flux/cluster
             --verbose
 
   diff:
     if: ${{ needs.filter.outputs.changed-files != '[]' }}
     needs: filter
     name: Flux Local - Diff
-    runs-on: ubuntu-latest
+    runs-on: docker
+    container: ghcr.io/catthehacker/ubuntu:runner-latest
     permissions:
       contents: read
       pull-requests: write
@@ -60,17 +63,17 @@ jobs:
       fail-fast: false
     steps:
       - name: Checkout Pull Request Branch
-        uses: actions/checkout@8e8c483db84b4bee98b60c0593521ed34d9990e8 # v6.0.1
+        uses: actions/checkout@v6
         with:
           path: pull
           persist-credentials: false
 
       - name: Checkout Default Branch
-        uses: actions/checkout@8e8c483db84b4bee98b60c0593521ed34d9990e8 # v6.0.1
+        uses: actions/checkout@v6
         with:
           path: default
           persist-credentials: false
-          ref: "${{ github.event.repository.default_branch }}"
+          ref: "${{ forgejo.event.repository.default_branch }}"
 
       - name: Run flux-local diff
         uses: docker://ghcr.io/allenporter/flux-local:v8.0.0
@@ -78,8 +81,8 @@ jobs:
           args: >-
             diff ${{ matrix.resource }}
             --unified 6
-            --path /github/workspace/pull/kubernetes/flux/cluster
-            --path-orig /github/workspace/default/kubernetes/flux/cluster
+            --path ${{ forgejo.workspace }}/pull/kubernetes/flux/cluster
+            --path-orig ${{ forgejo.workspace }}/default/kubernetes/flux/cluster
             --strip-attrs "helm.sh/chart,checksum/config,app.kubernetes.io/version,chart"
             --limit-bytes 10000
             --all-namespaces
@@ -94,29 +97,22 @@ jobs:
           echo 'EOF' >> $GITHUB_OUTPUT
 
       - if: ${{ steps.diff.outputs.diff != '' }}
-        name: Generate Token
-        uses: actions/create-github-app-token@29824e69f54612133e76f7eaac726eef6c875baf # v2.2.1
-        id: app-token
-        with:
-          app-id: ${{ secrets.BOT_APP_ID }}
-          private-key: ${{ secrets.BOT_APP_PRIVATE_KEY }}
-
-      - if: ${{ steps.diff.outputs.diff != '' }}
         name: Add Comment
-        uses: marocchino/sticky-pull-request-comment@773744901bac0e8cbb5a0dc842800d45e9b2b405 # v2.9.4
-        with:
-          GITHUB_TOKEN: ${{ steps.app-token.outputs.token }}
-          header: ${{ github.event.pull_request.number }}/kubernetes/${{ matrix.resource }}
-          message: |
-            ```diff
-            ${{ steps.diff.outputs.diff }}
-            ```
+        run: |
+          printf '%s' "${{ steps.diff.outputs.diff }}" \
+          | jq -Rs '{body: "```diff\n\(.)\n```"}' \
+          | curl -X POST \
+            -H "Authorization: token ${{ forgejo.token }}" \
+            -H "Content-Type: application/json" \
+            -d @- \
+            "${{ forgejo.api_url }}/repos/${{ forgejo.repository }}/issues/${{ forgejo.event.pull_request.number }}/comments"
 
   success:
     if: ${{ !cancelled() }}
     needs: ["test", "diff"]
     name: Flux Local - Success
-    runs-on: ubuntu-latest
+    runs-on: docker
+    container: ghcr.io/catthehacker/ubuntu:runner-latest
     steps:
       - name: Any jobs failed?
         if: ${{ contains(needs.*.result, 'failure') }}
