--- a/.renovaterc.json5
+++ b/.renovaterc.json5
@@ -4,13 +4,12 @@
     "config:recommended",
     "docker:enableMajor",
     "helpers:pinGitHubActionDigests",
-    // "github>Nomsplease/Home-Ops//.renovate/allowedVersions.json5",
-    "github>Nomsplease/Home-Ops//.renovate/autoMerge.json5",
-    "github>Nomsplease/Home-Ops//.renovate/customManagers.json5",
-    // "github>Nomsplease/Home-Ops//.renovate/grafanaDashboards.json5",
-    "github>Nomsplease/Home-Ops//.renovate/groups.json5",
-    "github>Nomsplease/Home-Ops//.renovate/labels.json5",
-    "github>Nomsplease/Home-Ops//.renovate/semanticCommits.json5",
+    "local>Homelab/Home-Ops//.renovate/autoMerge.json5",
+    "local>Homelab/Home-Ops//.renovate/customManagers.json5",
+    // "local>Homelab/Home-Ops//.renovate/grafanaDashboards.json5",
+    "local>Homelab/Home-Ops//.renovate/groups.json5",
+    "local>Homelab/Home-Ops//.renovate/labels.json5",
+    "local>Homelab/Home-Ops//.renovate/semanticCommits.json5",
     ":automergeBranch",
     ":disableRateLimiting",
     ":dependencyDashboard",
