chore: Move Flux over to Forgejo

--- a/kubernetes/apps/flux-system/flux-instance/app/helmrelease.yaml
+++ b/kubernetes/apps/flux-system/flux-instance/app/helmrelease.yaml
@@ -30,7 +30,7 @@ spec:
         - notification-controller
       sync:
         kind: GitRepository
-        url: https://github.com/Nomsplease/Home-Ops
+        url: https://git.noms.tv/Homelab/Home-Ops
         ref: refs/heads/main
         path: kubernetes/flux/cluster
         interval: 1h
