--- a/kubernetes/apps/flux-system/flux-instance/app/externalsecret.yaml
+++ b/kubernetes/apps/flux-system/flux-instance/app/externalsecret.yaml
@@ -3,16 +3,16 @@
 apiVersion: external-secrets.io/v1
 kind: ExternalSecret
 metadata:
-  name: github-webhook-token
+  name: webhook-token
 spec:
   secretStoreRef:
     kind: ClusterSecretStore
     name: onepassword
   target:
-    name: github-webhook-token
+    name: webhook-token
     template:
       data:
-        token: "{{ .FLUX_GITHUB_WEBHOOK_TOKEN }}"
+        token: "{{ .FLUX_WEBHOOK_TOKEN }}"
   dataFrom:
     - extract:
         key: flux
