--- a/kubernetes/apps/flux-system/flux-instance/app/httproute.yaml
+++ b/kubernetes/apps/flux-system/flux-instance/app/httproute.yaml
@@ -3,9 +3,9 @@
 apiVersion: gateway.networking.k8s.io/v1
 kind: HTTPRoute
 metadata:
-  name: flux-main-webhook
+  name: flux-webhook
 spec:
-  hostnames: ["flux-main-webhook.noms.tv"]
+  hostnames: ["flux-webhook-main.noms.tv"]
   parentRefs:
     - name: envoy-external
       namespace: network
