fix: Tunarr nedds persistence and a route

--- a/kubernetes/apps/media/tunarr/app/helmrelease.yaml
+++ b/kubernetes/apps/media/tunarr/app/helmrelease.yaml
@@ -68,3 +68,14 @@ spec:
         ports:
           http:
             port: *port
+    route:
+      app:
+        hostnames:
+          - "{{ .Release.Name }}.noms.tv"
+        parentRefs:
+          - name: envoy-internal
+            namespace: network
+            sectionName: https
+    persistence:
+      config:
+        existingClaim: "{{ .Release.Name }}"
