--- a/kubernetes/apps/media/tunarr/ks.yaml
+++ b/kubernetes/apps/media/tunarr/ks.yaml
@@ -3,10 +3,19 @@
 apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
-  name: tunarr
+  name: &app tunarr
 spec:
+  components:
+    - ../../../../components/volsync
+  dependsOn:
+    - name: volsync
+      namespace: volsync-system
   interval: 30m
   path: ./kubernetes/apps/media/tunarr/app
+  postBuild:
+    substitute:
+      APP: *app
+      VOLSYNC_CAPACITY: 5Gi
   prune: true 
   retryInterval: 1m
   sourceRef:
