chore: Add tempfs

--- a/kubernetes/apps/media/tunarr/app/helmrelease.yaml
+++ b/kubernetes/apps/media/tunarr/app/helmrelease.yaml
@@ -79,3 +79,7 @@ spec:
     persistence:
       config:
         existingClaim: "{{ .Release.Name }}"
+      tmp:
+        type: emptyDir
+        globalMounts:
+          - path: /root/.local/share/tunarr
