chore: Add more unwanted to Recyclarr

--- a/kubernetes/apps/media/recyclarr/app/resources/recyclarr.yml
+++ b/kubernetes/apps/media/recyclarr/app/resources/recyclarr.yml
@@ -25,6 +25,7 @@ sonarr:
           - e1a997ddb54e3ecbfe06341ad323c458 # Obfuscated
           - 06d66ab109d4d2eddb2794d21526d140 # Retags
           - 1b3994c551cbb92a2c781af061f4ab44 # Scene
+          - e6886871085226c3da1830830146846c # Generated HDR
 
           # Misc
           - ec8fa7296b64e8cd390a1600981f3923 # Repack/Proper
