fix: External secret reference

--- a/kubernetes/apps/source-control/forgejo-home-ops-runner/app/externalsecret.yaml
+++ b/kubernetes/apps/source-control/forgejo-home-ops-runner/app/externalsecret.yaml
@@ -18,4 +18,4 @@ spec:
         FORGEJO_RUNNER_SECRET: '{{ .FORGEJO_RUNNER_SECRET }}'
   dataFrom:
     - extract:
-        key: actions-runner
+        key: forgejo-home-ops-runner
