fix: Set TALOSCONFIG since its not doing so automatically

--- a/kubernetes/apps/source-control/forgejo-home-ops-runner/app/helmrelease.yaml
+++ b/kubernetes/apps/source-control/forgejo-home-ops-runner/app/helmrelease.yaml
@@ -24,6 +24,8 @@ spec:
                 valueFrom:
                   fieldRef:
                     fieldPath: status.hostIP
+              - name: TALOSCONFIG
+                value: /var/run/secrets/talos.dev/config
             envFrom:
               - secretRef:
                   name: "{{ .Release.Name }}-secret"
