--- a/.forgejo/workflows/renovate.yaml
+++ b/.forgejo/workflows/renovate.yaml
@@ -36,8 +36,7 @@ permissions:
 jobs:
   renovate:
     name: Renovate
-    runs-on: docker
-    container: ghcr.io/renovatebot/renovate:42.74.0
+    runs-on: ubuntu-latest
     steps:
       - name: Checkout
         uses: actions/checkout@8e8c483db84b4bee98b60c0593521ed34d9990e8 # v6
