feat: Deploy Profilarr

--- a/kubernetes/apps/media/kustomization.yaml
+++ b/kubernetes/apps/media/kustomization.yaml
@@ -17,6 +17,7 @@ resources:
   - ./music-assistant/ks.yaml
   - ./plex/ks.yaml
   - ./posterizarr/ks.yaml
+  - ./profilarr/ks.yaml
   - ./prowlarr/ks.yaml
   - ./radarr/ks.yaml
   - ./readarr/ks.yaml
