fix: Add Tmpfs mounts

--- a/kubernetes/apps/media/profilarr/app/helmrelease.yaml
+++ b/kubernetes/apps/media/profilarr/app/helmrelease.yaml
@@ -63,3 +63,8 @@ spec:
     persistence:
       config:
         existingClaim: "{{ .Release.Name }}"
+      tmpfs:
+        type: emptyDir
+        globalMounts:
+          - path: /home/appuser
+            subPath: home
