--- a/kubernetes/apps/default/paperless/gotenberg/helmrelease.yaml
+++ b/kubernetes/apps/default/paperless/gotenberg/helmrelease.yaml
@@ -8,14 +8,7 @@ spec:
   interval: 30m
   chartRef:
     kind: OCIRepository
-    name: app-template
-  install:
-    remediation:
-      retries: -1
-  upgrade:
-    cleanupOnFail: true
-    remediation:
-      retries: 3
+    name: paperless
   values:
     controllers:
       *app :
