--- a/kubernetes/apps/databases/cloudnative-pg/app/helmrelease.yaml
+++ b/kubernetes/apps/databases/cloudnative-pg/app/helmrelease.yaml
@@ -3,19 +3,12 @@
 apiVersion: helm.toolkit.fluxcd.io/v2
 kind: HelmRelease
 metadata:
-  name: cloudnative-pg
+  name: &app cloudnative-pg
 spec:
   interval: 30m
   chartRef:
     kind: OCIRepository
-    name: cloudnative-pg
-  install:
-    remediation:
-      retries: -1
-  upgrade:
-    cleanupOnFail: true
-    remediation:
-      retries: 3
+    name: *app
   values:
     crds:
       create: true
