--- a/kubernetes/apps/databases/pgadmin/app/helmrelease.yaml
+++ b/kubernetes/apps/databases/pgadmin/app/helmrelease.yaml
@@ -3,19 +3,12 @@
 apiVersion: helm.toolkit.fluxcd.io/v2
 kind: HelmRelease
 metadata:
-  name: pgadmin
+  name: &app pgadmin
 spec:
   interval: 30m
   chartRef:
     kind: OCIRepository
-    name: pgadmin
-  install:
-    remediation:
-      retries: -1
-  upgrade:
-    cleanupOnFail: true
-    remediation:
-      retries: 3
+    name: *app
   values:
     controllers:
       pgadmin:
