--- a/kubernetes/apps/download/cross-seed/app/helmrelease.yaml
+++ b/kubernetes/apps/download/cross-seed/app/helmrelease.yaml
@@ -3,15 +3,15 @@
 apiVersion: helm.toolkit.fluxcd.io/v2
 kind: HelmRelease
 metadata:
-  name: cross-seed
+  name: &app cross-seed
 spec:
   chartRef:
     kind: OCIRepository
-    name: cross-seed
+    name: *app
   interval: 1h
   values:
     controllers:
-      cross-seed:
+      *app :
         type: statefulset
         annotations:
           reloader.stakater.com/auto: "true"
