--- a/kubernetes/apps/download/qbittorrent/app/helmrelease.yaml
+++ b/kubernetes/apps/download/qbittorrent/app/helmrelease.yaml
@@ -3,15 +3,15 @@
 apiVersion: helm.toolkit.fluxcd.io/v2
 kind: HelmRelease
 metadata:
-  name: qbittorrent
+  name: &app qbittorrent
 spec:
   chartRef:
     kind: OCIRepository
-    name: qbittorrent
+    name: *app
   interval: 1h
   values:
     controllers:
-      qbittorrent:
+      *app :
         annotations:
           reloader.stakater.com/auto: "true"
         containers:
