--- a/kubernetes/apps/flux-system/flux-operator/app/helmrelease.yaml
+++ b/kubernetes/apps/flux-system/flux-operator/app/helmrelease.yaml
@@ -3,12 +3,12 @@
 apiVersion: helm.toolkit.fluxcd.io/v2
 kind: HelmRelease
 metadata:
-  name: flux-operator
+  name: &app flux-operator
 spec:
   interval: 1h
   chartRef:
     kind: OCIRepository
-    name: flux-operator
+    name: *app
   install:
     remediation:
       retries: -1
