--- a/kubernetes/apps/home/matter-server/app/helmrelease.yaml
+++ b/kubernetes/apps/home/matter-server/app/helmrelease.yaml
@@ -3,22 +3,15 @@
 apiVersion: helm.toolkit.fluxcd.io/v2
 kind: HelmRelease
 metadata:
-  name: matter-server
+  name: &app matter-server
 spec:
   interval: 30m
   chartRef:
     kind: OCIRepository
-    name: matter-server
-  install:
-    remediation:
-      retries: -1
-  upgrade:
-    cleanupOnFail: true
-    remediation:
-      retries: 3
+    name: *app
   values:
     controllers:
-      matter-server:
+      *app :
         annotations:
           reloader.stakater.com/auto: "true"
         pod:
