--- a/kubernetes/apps/home/piper/app/ocirepository.yaml
+++ b/kubernetes/apps/home/piper/app/ocirepository.yaml
@@ -3,7 +3,7 @@
 apiVersion: source.toolkit.fluxcd.io/v1
 kind: OCIRepository
 metadata:
-  name: matter-server
+  name: piper
 spec:
   interval: 15m
   layerSelector:
