--- a/kubernetes/apps/home/zwave-js-ui/app/ocirepository.yaml
+++ b/kubernetes/apps/home/zwave-js-ui/app/ocirepository.yaml
@@ -3,7 +3,7 @@
 apiVersion: source.toolkit.fluxcd.io/v1
 kind: OCIRepository
 metadata:
-  name: matter-server
+  name: zwave-js-ui
 spec:
   interval: 15m
   layerSelector:
