--- a/kubernetes/apps/kube-system/cilium/app/helmrelease.yaml
+++ b/kubernetes/apps/kube-system/cilium/app/helmrelease.yaml
@@ -3,11 +3,11 @@
 apiVersion: helm.toolkit.fluxcd.io/v2
 kind: HelmRelease
 metadata:
-  name: cilium
+  name: &app cilium
 spec:
   chartRef:
     kind: OCIRepository
-    name: cilium
+    name: *app
   interval: 1h
   values:
     autoDirectNodeRoutes: true
