--- a/kubernetes/apps/kube-system/coredns/app/helmrelease.yaml
+++ b/kubernetes/apps/kube-system/coredns/app/helmrelease.yaml
@@ -3,21 +3,14 @@
 apiVersion: helm.toolkit.fluxcd.io/v2
 kind: HelmRelease
 metadata:
-  name: coredns
+  name: &app coredns
 spec:
   interval: 1h
   chartRef:
     kind: OCIRepository
-    name: coredns
-  install:
-    remediation:
-      retries: -1
-  upgrade:
-    cleanupOnFail: true
-    remediation:
-      retries: 3
+    name: *app
   values:
-    fullnameOverride: coredns
+    fullnameOverride: *app
     image:
       repository: mirror.gcr.io/coredns/coredns
     replicaCount: 2
