--- a/kubernetes/apps/kube-system/node-feature-discovery/app/helmrelease.yaml
+++ b/kubernetes/apps/kube-system/node-feature-discovery/app/helmrelease.yaml
@@ -3,18 +3,16 @@
 apiVersion: helm.toolkit.fluxcd.io/v2
 kind: HelmRelease
 metadata:
-  name: &app intel-device-plugin-operator
+  name: &app node-feature-discovery
 spec:
-  interval: 1h
+  interval: 30m
   chartRef:
     kind: OCIRepository
     name: *app
-  install:
-    crds: CreateReplace
-  upgrade:
-    cleanupOnFail: true
-    crds: CreateReplace
   values:
-    manager:
-      devices:
-        gpu: true
+    worker:
+      config:
+        core:
+          sources: ["pci", "system", "usb"]
+    prometheus:
+      enable: false
