--- a/kubernetes/apps/media/readarr/app/helmrelease.yaml
+++ b/kubernetes/apps/media/readarr/app/helmrelease.yaml
@@ -8,14 +8,7 @@ spec:
   interval: 30m
   chartRef:
     kind: OCIRepository
-    name: app-template
-  install:
-    remediation:
-      retries: -1
-  upgrade:
-    cleanupOnFail: true
-    remediation:
-      retries: 3
+    name: *app
   values:
     controllers:
       *app :
@@ -54,8 +47,6 @@ spec:
     persistence:
       config:
         existingClaim: *app
-        globalMounts:
-          - path: /config
       complete:
         type: nfs
         server: truenas.internal
