--- a/kubernetes/apps/media/audiobookshelf/app/helmrelease.yaml
+++ b/kubernetes/apps/media/audiobookshelf/app/helmrelease.yaml
@@ -3,22 +3,15 @@
 apiVersion: helm.toolkit.fluxcd.io/v2
 kind: HelmRelease
 metadata:
-  name: audiobookshelf
+  name: &app audiobookshelf
 spec:
   interval: 30m
   chartRef:
     kind: OCIRepository
-    name: audiobookshelf
-  install:
-    remediation:
-      retries: -1
-  upgrade:
-    cleanupOnFail: true
-    remediation:
-      retries: 3
+    name: *app
   values:
     controllers:
-      audiobookshelf:
+      *app :
         annotations:
           reloader.stakater.com/auto: "true"
         containers:
