--- a/kubernetes/apps/media/hdhr-ac4/app/helmrelease.yaml
+++ b/kubernetes/apps/media/hdhr-ac4/app/helmrelease.yaml
@@ -3,15 +3,15 @@
 apiVersion: helm.toolkit.fluxcd.io/v2
 kind: HelmRelease
 metadata:
-  name: hdhr-ac4
+  name: &app hdhr-ac4
 spec:
   interval: 30m
   chartRef:
     kind: OCIRepository
-    name: hdhr-ac4
+    name: *app
   values:
     controllers:
-      hdhr-ac4:
+      *app :
         annotations:
           reloader.stakater.com/auto: "true"
         containers:
