--- a/kubernetes/apps/media/jellyfin/app/helmrelease.yaml
+++ b/kubernetes/apps/media/jellyfin/app/helmrelease.yaml
@@ -3,15 +3,15 @@
 apiVersion: helm.toolkit.fluxcd.io/v2
 kind: HelmRelease
 metadata:
-  name: jellyfin
+  name: &app jellyfin
 spec:
   chartRef:
     kind: OCIRepository
-    name: jellyfin
+    name: *app
   interval: 1h
   values:
     controllers:
-      jellyfin:
+      *app :
         annotations:
           reloader.stakater.com/auto: "true"
         containers:
