--- a/kubernetes/apps/media/plex/app/helmrelease.yaml
+++ b/kubernetes/apps/media/plex/app/helmrelease.yaml
@@ -3,15 +3,15 @@
 apiVersion: helm.toolkit.fluxcd.io/v2
 kind: HelmRelease
 metadata:
-  name: plex
+  name: &app plex
 spec:
   chartRef:
     kind: OCIRepository
-    name: plex
+    name: *app
   interval: 1h
   values:
     controllers:
-      plex:
+      *app :
         annotations:
           reloader.stakater.com/auto: "true"
         containers:
