--- a/kubernetes/apps/media/seerr/app/helmrelease.yaml
+++ b/kubernetes/apps/media/seerr/app/helmrelease.yaml
@@ -3,15 +3,15 @@
 apiVersion: helm.toolkit.fluxcd.io/v2
 kind: HelmRelease
 metadata:
-  name: seerr
+  name: &app seerr
 spec:
   interval: 30m
   chartRef:
     kind: OCIRepository
-    name: seerr
+    name: *app
   values:
     controllers:
-      seerr:
+      *app :
         annotations:
           reloader.stakater.com/auto: "true"
         containers:
