--- a/kubernetes/apps/media/sonarr/kids/helmrelease.yaml
+++ b/kubernetes/apps/media/sonarr/kids/helmrelease.yaml
@@ -8,7 +8,7 @@ spec:
   interval: 30m
   chartRef:
     kind: OCIRepository
-    name: sonarr-kids
+    name: *app
   install:
     remediation:
       retries: -1
