--- a/kubernetes/apps/network/cloudflare-ddns/app/helmrelease.yaml
+++ b/kubernetes/apps/network/cloudflare-ddns/app/helmrelease.yaml
@@ -3,24 +3,15 @@
 apiVersion: helm.toolkit.fluxcd.io/v2
 kind: HelmRelease
 metadata:
-  name: cloudflare-ddns
+  name: &app cloudflare-ddns
 spec:
   interval: 1h
   chartRef:
     kind: OCIRepository
-    name: app-template
-  install:
-    remediation:
-      retries: -1
-  upgrade:
-    cleanupOnFail: true
-    remediation:
-      retries: 3
+    name: *app
   values:
     controllers:
-      cloudflare-tunnel:
-        replicas: 2
-        strategy: RollingUpdate
+      *app :
         annotations:
           reloader.stakater.com/auto: "true"
         containers:
@@ -34,7 +25,6 @@ spec:
             envFrom:
               - secretRef:
                   name: cloudflare-ddns
-            args: ["tunnel", "run"]
             securityContext:
               allowPrivilegeEscalation: false
               readOnlyRootFilesystem: true
