--- a/kubernetes/apps/network/cloudflare-tunnel/app/helmrelease.yaml
+++ b/kubernetes/apps/network/cloudflare-tunnel/app/helmrelease.yaml
@@ -3,15 +3,15 @@
 apiVersion: helm.toolkit.fluxcd.io/v2
 kind: HelmRelease
 metadata:
-  name: cloudflare-tunnel
+  name: &app cloudflare-tunnel
 spec:
   chartRef:
     kind: OCIRepository
-    name: cloudflare-tunnel
+    name: *app
   interval: 1h
   values:
     controllers:
-      cloudflare-tunnel:
+      *app :
         replicas: 2
         strategy: RollingUpdate
         annotations:
