--- a/kubernetes/apps/network/envoy-gateway/app/helmrelease.yaml
+++ b/kubernetes/apps/network/envoy-gateway/app/helmrelease.yaml
@@ -3,11 +3,11 @@
 apiVersion: helm.toolkit.fluxcd.io/v2
 kind: HelmRelease
 metadata:
-  name: envoy-gateway
+  name: &app envoy-gateway
 spec:
   chartRef:
     kind: OCIRepository
-    name: envoy-gateway
+    name: *app
   interval: 1h
   values:
     global:
