--- a/kubernetes/apps/rook-ceph/rook-ceph/app/helmrelease.yaml
+++ b/kubernetes/apps/rook-ceph/rook-ceph/app/helmrelease.yaml
@@ -3,11 +3,11 @@
 apiVersion: helm.toolkit.fluxcd.io/v2
 kind: HelmRelease
 metadata:
-  name: rook-ceph
+  name: &app rook-ceph
 spec:
   chartRef:
     kind: OCIRepository
-    name: rook-ceph
+    name: *app
   interval: 1h
   values:
     csi:
