--- a/kubernetes/apps/system-upgrade/tuppr/app/helmrelease.yaml
+++ b/kubernetes/apps/system-upgrade/tuppr/app/helmrelease.yaml
@@ -3,11 +3,11 @@
 apiVersion: helm.toolkit.fluxcd.io/v2
 kind: HelmRelease
 metadata:
-  name: tuppr
+  name: &app tuppr
 spec:
   chartRef:
     kind: OCIRepository
-    name: tuppr
+    name: *app
   interval: 1h
   values:
     replicaCount: 2
