--- a/kubernetes/apps/kube-system/intel-device-plugin-operator/gpu/helmrelease.yaml
+++ b/kubernetes/apps/kube-system/intel-device-plugin-operator/gpu/helmrelease.yaml
@@ -3,7 +3,7 @@
 apiVersion: helm.toolkit.fluxcd.io/v2
 kind: HelmRelease
 metadata:
-  name: &app intel-device-plugin-gpu
+  name: &app intel-device-plugins-gpu
 spec:
   interval: 1h
   chartRef:
