--- a/kubernetes/apps/observability/kustomization.yaml
+++ b/kubernetes/apps/observability/kustomization.yaml
@@ -7,6 +7,7 @@ resources:
   - ./namespace.yaml
   - ./blackbox-exporter/ks.yaml
   - ./grafana/ks.yaml
+  - ./headlamp/ks.yaml
   - ./keda/ks.yaml
   - ./kube-prometheus-stack/ks.yaml
   - ./loki/ks.yaml
