fix: Array wanted

--- a/kubernetes/apps/observability/headlamp/app/helmrelease.yaml
+++ b/kubernetes/apps/observability/headlamp/app/helmrelease.yaml
@@ -19,7 +19,8 @@ spec:
       runAsGroup: 1000
     persistentVolumeClaim:
       enabled: true
-      accessModes: ReadWriteOnce
+      accessModes: 
+        - ReadWriteOnce
       size: 10Gi
       storageClassName: ceph-block
     httpRoute:
