--- a/kubernetes/apps/media/dispatcharr/ks.yaml
+++ b/kubernetes/apps/media/dispatcharr/ks.yaml
@@ -8,7 +8,7 @@ spec:
   components:
     - ../../../../components/volsync
   dependsOn:
-    - name: intel-device-plugin-gpu
+    - name: intel-device-plugins-gpu
       namespace: kube-system
     - name: volsync
       namespace: volsync-system 
