--- a/kubernetes/apps/media/plex/ks.yaml
+++ b/kubernetes/apps/media/plex/ks.yaml
@@ -9,7 +9,7 @@ spec:
     # - ../../../../components/nfs-scaler
     - ../../../../components/volsync
   dependsOn:
-    - name: intel-device-plugin-gpu
+    - name: intel-device-plugins-gpu
       namespace: kube-system
     - name: volsync
       namespace: volsync-system
