--- a/kubernetes/apps/observability/blackbox-exporter/internal/probes.yaml
+++ b/kubernetes/apps/observability/blackbox-exporter/internal/probes.yaml
@@ -7,11 +7,15 @@ metadata:
 spec:
   module: icmp
   prober:
-    url: blackbox-exporter-lan.observability.svc.cluster.local:9115
+    url: blackbox-exporter-internal.observability.svc.cluster.local:9115
   targets:
     staticConfig:
       static:
         - truenas.internal
+  metricRelabelings:
+    - targetLabel: service
+      replacement: blackbox-exporter-internal
+      action: replace
 ---
 # yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/monitoring.coreos.com/probe_v1.json
 apiVersion: monitoring.coreos.com/v1
@@ -21,8 +25,12 @@ metadata:
 spec:
   module: tcp_connect
   prober:
-    url: blackbox-exporter-lan.observability.svc.cluster.local:9115
+    url: blackbox-exporter-internal.observability.svc.cluster.local:9115
   targets:
     staticConfig:
       static:
         - truenas.internal:2049
+  metricRelabelings:
+    - targetLabel: service
+      replacement: blackbox-exporter-internal
+      action: replace
