feat: Enable nfs-scaler on jellyfin and plex. Fixes #1237

--- a/kubernetes/apps/media/jellyfin/ks.yaml
+++ b/kubernetes/apps/media/jellyfin/ks.yaml
@@ -6,7 +6,7 @@ metadata:
   name: jellyfin
 spec:
   components:
-    # - ../../../../components/nfs-scaler
+    - ../../../../components/nfs-scaler
     - ../../../../components/volsync
   dependsOn:
     - name: intel-device-plugins-gpu
