--- a/kubernetes/apps/media/plex/ks.yaml
+++ b/kubernetes/apps/media/plex/ks.yaml
@@ -6,7 +6,7 @@ metadata:
   name: &app plex
 spec:
   components:
-    # - ../../../../components/nfs-scaler
+    - ../../../../components/nfs-scaler
     - ../../../../components/volsync
   dependsOn:
     - name: intel-device-plugins-gpu
