fix: rtlamr2mqtt restart cronjob

--- a/kubernetes/apps/home/rtlamr2mqtt/app/cronjob.yaml
+++ b/kubernetes/apps/home/rtlamr2mqtt/app/cronjob.yaml
@@ -18,7 +18,7 @@ spec:
             - name: kubectl
               # renovate: datasource=docker depName=ghcr.io/siderolabs/kubelet
               image: registry.k8s.io/kubectl:v1.35.0
-              command:
-                - /bin/sh
-                - -c
-                - kubectl rollout restart deployment/rtlamr2mqtt
+              args:
+                - rollout
+                - restart
+                - deployment/rtlamr2mqtt
